# cs-events-api

./: .env  .env.test  .gitignore  INFO.md  README.md  TODO.md  example.http  main.py  pyproject.toml
app/: config.py  main.py
app/events/: event_service.py  schemas.py
app/routers/: events.py
data/: events.jsonl
tests/int/: test_events.jsonl  test_events.py
tests/unit/: test_event_service.py
